--- a/app/src/main/res/layout/station_fragment.xml
+++ b/app/src/main/res/layout/station_fragment.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    tools:targetApi="o">
 
     <data>
+
         <variable
             name="viewModel"
-            type="com.ozturkburak.outerworlds.features.stationlist.station.StationViewModel" />
+            type="com.ozturkburak.outerworlds.features.stationlist.StationListViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/coordinator"
+        android:id="@+id/parent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingStart="16dp"
@@ -23,6 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/ugs"
+            android:tooltipText="Uzay giysisi sayısı"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -33,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
-            android:text="5000"
+            android:text="@{viewModel.shipInfoObservable.stock}"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/black"
             app:layout_constraintStart_toEndOf="@+id/label_ugs"
@@ -47,9 +50,11 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="4dp"
             android:text="@string/eus"
+            android:tooltipText="@string/eus_long"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintEnd_toStartOf="@+id/guideline2"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
         <TextView
             android:id="@+id/eus_points"
@@ -57,7 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginTop="16dp"
-            android:text="500"
+            android:text="@{viewModel.shipInfoObservable.speed}"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -70,7 +75,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
-            android:text="@string/dss"
+            android:text="@string/ds"
+            android:tooltipText="@string/ds_long"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintEnd_toStartOf="@+id/ds_points"
             app:layout_constraintTop_toTopOf="parent" />
@@ -80,7 +86,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="50000"
+            android:text="@{viewModel.shipInfoObservable.strength}"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
@@ -100,8 +106,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.5"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintGuide_percent="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -111,10 +117,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="WhartonX"
+            android:text="@{viewModel.shipInfoObservable.name}"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/black"
+            android:ellipsize="end"
             app:layout_constraintBottom_toBottomOf="@+id/v_100"
+            app:layout_constraintEnd_toStartOf="@+id/seconds"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/divider_top"
             tools:text="WhartonX" />
@@ -125,8 +133,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="18dp"
             android:background="@drawable/input_bg"
-            android:text="49s"
             android:gravity="center"
+            android:text="49s"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
@@ -147,8 +155,8 @@
             app:layout_constraintTop_toBottomOf="@+id/divider_top" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/input_name"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:id="@+id/search_layout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -158,11 +166,13 @@
             app:startIconDrawable="@drawable/ic_search"
             app:startIconTint="@android:color/darker_gray">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <AutoCompleteTextView
+                android:id="@+id/auto_complete_search"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:maxLength="50"
                 android:hint="@string/search"
+                android:maxLength="50"
+                android:inputType="none"
                 android:singleLine="true" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -173,18 +183,20 @@
             android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/input_name" />
+            app:layout_constraintTop_toBottomOf="@+id/search_layout"
+            tools:listitem="@layout/item_station" />
 
         <TextView
             android:id="@+id/label_station_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="32dp"
-            android:text="Tglsxvp"
+            android:text="@{viewModel.currentStationObservable.name}"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="Tglsxvp" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
