--- a/app/src/main/res/layout/station_fragment.xml
+++ b/app/src/main/res/layout/station_fragment.xml
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
-            android:text="@{viewModel.shipInfoObservable.stock}"
+            android:text="@{viewModel.shipInfoObservable.capacity}"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/black"
             app:layout_constraintStart_toEndOf="@+id/label_ugs"
@@ -134,7 +134,8 @@
             android:layout_marginTop="18dp"
             android:background="@drawable/input_bg"
             android:gravity="center"
-            android:text="49s"
+            tools:text="49s"
+            android:text="@{viewModel.timerObservable}"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
