[burak.ozturk][InfoSheet eklendi, Oyun sonu logic degistirildi,genel fix]

--- a/app/src/main/res/layout/activity_ship_creator.xml
+++ b/app/src/main/res/layout/activity_ship_creator.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/total_points"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -35,12 +35,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
             android:text="@{viewModel.totalPointsObservable}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/black"
-            app:layout_constraintStart_toEndOf="@+id/label_points"
-            app:layout_constraintTop_toTopOf="parent"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="@color/darker_gray"
+            app:layout_constraintBottom_toBottomOf="@id/label_points"
+            app:layout_constraintStart_toEndOf="@id/label_points"
+            app:layout_constraintTop_toTopOf="@id/label_points"
             tools:text="15" />
 
         <View
@@ -49,7 +49,7 @@
             android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/label_points" />
+            app:layout_constraintTop_toBottomOf="@id/label_points" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_name"
@@ -62,14 +62,14 @@
             android:hint="@string/enter_name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divider_top">
+            app:layout_constraintTop_toBottomOf="@id/divider_top">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLength="50"
                 android:singleLine="true"
-                android:text="@={viewModel.inputName}" />
+                android:text="@={viewModel.inputName}"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -80,8 +80,9 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:text="@string/strength"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/input_name" />
+            app:layout_constraintTop_toBottomOf="@id/input_name" />
 
         <com.google.android.material.slider.Slider
             android:id="@+id/seekbar_strength"
@@ -95,7 +96,7 @@
             android:valueTo="13"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/label_strength"
+            app:layout_constraintTop_toBottomOf="@id/label_strength"
             app:tickVisible="false" />
 
         <TextView
@@ -105,8 +106,9 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:text="@string/speed"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/seekbar_strength" />
+            app:layout_constraintTop_toBottomOf="@id/seekbar_strength" />
 
         <com.google.android.material.slider.Slider
             android:id="@+id/seekbar_speed"
@@ -120,7 +122,7 @@
             android:valueTo="13"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/label_speed"
+            app:layout_constraintTop_toBottomOf="@id/label_speed"
             app:tickVisible="false" />
 
 
@@ -131,8 +133,9 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:text="@string/capacity"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/seekbar_speed" />
+            app:layout_constraintTop_toBottomOf="@id/seekbar_speed" />
 
         <com.google.android.material.slider.Slider
             android:id="@+id/seekbar_capacity"
@@ -146,15 +149,15 @@
             android:valueTo="13"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/label_capacity"
+            app:layout_constraintTop_toBottomOf="@id/label_capacity"
             app:tickVisible="false" />
 
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button_continue"
             style="?attr/materialButtonOutlinedStyle"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/button_default_height"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="32dp"
@@ -163,7 +166,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/seekbar_capacity"
+            app:layout_constraintTop_toBottomOf="@id/seekbar_capacity"
             app:layout_constraintVertical_bias="1.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
