--- a/app/src/main/res/layout/item_favorite.xml
+++ b/app/src/main/res/layout/item_favorite.xml
@@ -44,9 +44,9 @@
                 android:layout_marginTop="4dp"
                 android:text="@{viewData.eusText}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textColor="?attr/colorButtonNormal"
+                android:textColor="@color/white"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/name"
+                app:layout_constraintTop_toBottomOf="@id/name"
                 tools:text="234EUS" />
 
             <TextView
@@ -57,10 +57,10 @@
                 android:layout_marginBottom="8dp"
                 android:text="@{viewData.stockText}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                android:textColor="?attr/colorButtonNormal"
+                android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/eus"
+                app:layout_constraintTop_toBottomOf="@id/eus"
                 tools:text="234EUS" />
 
             <ImageView
